# OpenQBot

./: Cargo.toml  README.md
docs/: ARCHITECTURE_PROPOSAL_V1.md
src/: main.rs
src/broker/: account.rs  mod.rs  stream.rs  ws.rs
src/broker/binance/: account.rs  mapper.rs  mod.rs  request.rs  stream.rs  ws.rs
src/broker/kraken/: KRAKEN_INTEGRATION.md  auth.rs  mapper.rs  mod.rs  stream.rs
src/domain/: market.rs
src/indicators/: bollinger_bands.rs  mod.rs  sma.rs
src/strategies/: bollinger_bounce.rs  mod.rs  strategy.rs
